--- a/src/app/add-post-modal/add-post-modal.component.html
+++ b/src/app/add-post-modal/add-post-modal.component.html
@@ -11,7 +11,7 @@
             <form>
                 <div class="form-group">
                   <label for="exampleFormControlInput1">Post Tittle</label>
-                  <input type="text" class="form-control" id="exampleFormControlInput1">
+                  <input type="text" class="form-control" [value]="" id="exampleFormControlInput1">
                 </div>
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Post Content</label>
@@ -21,7 +21,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" >Save</button>
         </div>
       </div>
     </div>
