--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,48 +1,27 @@
 <div class="container">
     <div class="pull-right pt-4 pb-4">
-      <button type="button" data-toggle="modal" data-target="#add-post-popup" class="btn btn-outline-primary">Add Post</button>
+      <button (click)="add_post()" type="button" data-toggle="modal" data-target="#add-post-popup" class="btn btn-outline-primary">Add Post</button>
     </div>
-      <div class="row">
-          <!-- Blog entries-->
-          <div class="col-md-12">
-              <div class="card mb-4">
-                <div class="card-header text-muted">
-                <div class="row col-md-12">
-                    <div class="col-md-10"  >
-                        Posted on January 1, 2021 by
-                        <a href="">Start Bootstrap</a>
-                    </div>
-                    <div class="col-md-2">
-                        <button type="button" (click)="test()" data-toggle="modal" data-target="#add-post-popup" class="btn btn-link">Edit</button>
-                        <button type="button" class="btn btn-link">Delete</button>
-                    </div>
-                </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div *ngFor="let post of postsJson" class="card mb-4">
+              <div class="card-header text-muted">
+              <div class="row col-md-12">
+                  <div class="col-md-10"  >
+                    {{ post.postedDate }}
+                      <a href="">{{ post.postedBy }}</a>
                   </div>
-                  <div class="card-body">
-                      <h2 class="card-title">Post Title</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+                  <div class="col-md-2">
+                      <a (click)="test()" data-toggle="modal" data-target="#add-post-popup" class="btn btn-link">Edit</a>
+                      <a (click)="delete_post(this)" class="btn btn-link">Delete</a>
                   </div>
               </div>
-              <div class="card mb-4">
-                <div class="card-header text-muted">
-                  Posted on January 1, 2021 by
-                  <a href="#!">Start Bootstrap</a>
                 </div>
-                  <div class="card-body">
-                      <h2 class="card-title">Post Title</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                  </div>
-              </div>
-              <div class="card mb-4">
-                <div class="card-header text-muted">
-                  Posted on January 1, 2021 by
-                  <a href="#!">Start Bootstrap</a>
+                <div class="card-body">
+                    <h2 class="card-title">{{ post.tittle }}</h2>
+                    <p class="card-text">{{ post.content }}</p>
                 </div>
-                  <div class="card-body">
-                      <h2 class="card-title">Post Title</h2>
-                      <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
+            </div>
+        </div>
+    </div>
+</div>
