--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -6,13 +6,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <a routerLink='/home' class="nav-link" href="#!">
+                    <a routerLink='' class="nav-link" href="#!">
                         Home
                         <span class="sr-only">(current)</span>
                     </a>
                 </li>
-                <li class="nav-item"><a routerLink='/about' class="nav-link" href="#!">About</a></li>
                 <li class="nav-item"><a routerLink='/contact'  class="nav-link" href="#!">Contact</a></li>
+                <li class="nav-item"><a routerLink='/about' class="nav-link" href="#!">About</a></li>
             </ul>
         </div>
     </div>
