--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,7 +12,7 @@
                       <a href="">{{ post.postedBy }}</a>
                   </div>
                   <div class="col-md-2">
-                      <a (click)="test()" data-toggle="modal" data-target="#add-post-popup" class="btn btn-link">Edit</a>
+                      <a (click)="test()" data-toggle="modal" data-target="#edit-post-popup" class="btn btn-link">Edit</a>
                       <a (click)="delete_post(this)" class="btn btn-link">Delete</a>
                   </div>
               </div>
