--- a/src/app/add-post-modal/add-post-modal.component.html
+++ b/src/app/add-post-modal/add-post-modal.component.html
@@ -2,7 +2,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLabel">{{PostModelTittle}}</h5>
+          <h5 class="modal-title" id="exampleModalLabel">{{PostModelTittleAdd}}</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -16,6 +16,35 @@
                 <div class="form-group">
                   <label for="exampleFormControlTextarea1">Post Content</label>
                   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+            </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" data-dismiss="modal" >Save</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="edit-post-popup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">{{PostModelTittleEdit}}</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <form>
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Post Tittle</label>
+                  <input type="text" class="form-control" [value]="PostModelTittleEditInput" id="exampleFormControlInput1">
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Post Content</label>
+                  <textarea class="form-control"[value]="PostModelContentEditInput" id="exampleFormControlTextarea1" rows="3"></textarea>
                 </div>
             </form>
         </div>
