json server imlementation

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,3 +9,6 @@
 </section>
 <!--Section: Contact v.2-->
 </section>
+
+<!-- <h1>{{getDataListPage}}</h1>
+<h1 *ngFor="let i of getDataListData" >{{i.name}}</h1> -->
