--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -34,7 +34,7 @@
                                 <div class="col-md-12">
                                     <div class="form-group"> <label for="form_message">Message *</label> <textarea id="form_message" name="message" class="form-control" placeholder="Write your message here." rows="4" required="required" data-error="Please, leave us a message."></textarea> </div>
                                 </div>
-                                <div class="col-md-12"> <input type="submit" class="btn btn-success btn-send pt-2 btn-block " value="Send Message"> </div>
+                                <div class="col-md-12"> <input type="submit" (click)='test()' class="btn btn-success btn-send pt-2 btn-block " value="Send Message"> </div>
                             </div>
                         </div>
                     </form>
