--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,21 @@
 <div class="container">
     <div class="pull-right pt-4 pb-4">
       <button type="button" (click)="addPostOnClick()" data-toggle="modal" data-target="#add-post-popup" class="btn btn-outline-primary">Add Post</button>
+     <!--  <button type="button" (click)="addPost()" class="btn btn-outline-primary">Add Post</button> -->
     </div>
     <div class="row">
         <div class="col-md-12">
             <div *ngFor="let post of postsJson" class="card mb-4">
               <div class="card-header text-muted">
               <div class="row col-md-12">
-                  <div class="col-md-10"  >
-                    {{ post.postedDate }}
-                      <a href="">{{ post.postedBy }}</a>
+                  <div class="col-md-10"  > Posted On 
+                    {{ post.postedDate }} By
+                      <a href=""> {{ post.postedBy }}</a>
                   </div>
                   <div class="col-md-2">
-                      <a (click)="editPostOnClick(post)" data-toggle="modal" data-target="#edit-post-popup" class="btn btn-link">Edit</a>
-                      <a (click)="delete_post(this)" class="btn btn-link">Delete</a>
+                      <!-- <a (click)="updatePost(post)" class="btn btn-link">Update</a> -->
+                      <a (click)="editPostOnClick(post)" data-toggle="modal" data-target="#add-post-popup" class="btn btn-link">Edit</a>
+                      <a (click)="delete_post(post)" class="btn btn-link">Delete</a>
                   </div>
               </div>
                 </div>
@@ -25,3 +27,32 @@
         </div>
     </div>
 </div>
+
+<div class="modal fade" id="add-post-popup" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">{{tittleToDisplay}}</h5>
+          <button type="button" class="close" #closebutton data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <form #addPostForm="ngForm" (ngSubmit)="onSubmit(addPostForm.value)" > 
+                <div class="form-group">
+                  <label for="exampleFormControlInput1">Post Tittle</label>
+                  <input type="text" ngModel class="form-control" [ngModel]="postObj.tittle" name='tittle' [value]="" id="exampleFormControlInput1" required>
+                </div>
+                <div class="form-group">
+                  <label for="exampleFormControlTextarea1">Post Content</label>
+                  <textarea class="form-control" [ngModel]="postObj.content" name='content'  id="exampleFormControlTextarea1" rows="3" required></textarea>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" id="cc" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary" type="submit" >Save</button>
+                </div>
+            </form>
+        </div>
+      </div>
+    </div>
+  </div>
